tests/parsing/smtlib/v2.7/errors/143_define-funs-rec_list_unclosed_1.smt2
(set-logic ALL)
(define-funs-rec ((foo () bool) _))
